--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,7 +11,11 @@
 </head>
 
 <body>
+    <%- include('_header');%>
     <h1>User Profile</h1>
+    <%- include('_footer');%>
 </body>
 
-</html>
+</html> -->
+
+<h1>User Profile</h1>
