--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,12 +8,16 @@
     <title>
         <%= title%>
     </title>
+    <link rel="stylesheet" href="/css/layout.css">
+    <!-- link style pages -->
+    <%- style %> 
 </head>
 
 <body>
     <%- include('_header');%>
         <%- body %>
     <%- include('_footer');%>
+    <%- script %>
 
 </body>
 
