--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,6 +1,6 @@
 <h1>Sign In</h1>
 
-<form action="/user/create-session" method="POSt">
+<form action="/users/create-session" method="POSt">
     <input type="text" name="email" placeholder="Email" required>
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit" value="Sign In">
