--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -20,3 +20,5 @@
 
 <link rel="stylesheet" href="/css/user_profile.css">
 <h1>User Profile</h1>
+<p>Name:<%= user.name%></p>
+<p>Email:<%= user.email%></p>
