--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,4 +13,13 @@
     
 </body>
 </html> -->
+
 <h1>Codeial</h1>
+
+<section id="feed-post">
+    <h4>Posts</h4>
+    <form action="/posts/create" id="new-post-form" method="post">
+        <textarea name="content" cols="30" rows="3"  placeholder="Type Here..."></textarea>
+        <input type="submit" value="submit">
+    </form>
+</section>
