--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,10 +18,13 @@
 
 <section id="feed-post">
     <h4>Posts</h4>
+    <!-- authenticate user is usr is valid then shoe form  -->
+    <% if (locals.user){ %>
     <form action="/posts/create" id="new-post-form" method="post">
         <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
         <input type="submit" value="submit">
     </form>
+    <%}%>
     <div id="posts-list-container">
         <ul>
             <% for(post of posts){%>
