--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,22 +20,35 @@
     <h4>Posts</h4>
     <!-- authenticate user is usr is valid then shoe form  -->
     <% if (locals.user){ %>
-    <form action="/posts/create" id="new-post-form" method="post">
-        <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
-        <input type="submit" value="submit">
-    </form>
-    <%}%>
-    <div id="posts-list-container">
-        <ul>
-            <% for(post of posts){%>
-                <li>
-                    <%= post.content %>
-                </li>
-                <small>
-                    <!-- <%= post.user %> -->
-                    <%= post.user.name %>
-                </small>
-                <% } %>
-        </ul>
-    </div>
+        <form action="/posts/create" id="new-post-form" method="post">
+            <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
+            <input type="submit" value="submit">
+        </form>
+        <%}%>
+            <div id="posts-list-container">
+                <ul>
+                    <% for(post of posts){%>
+                        <li>
+                            <p>
+
+                                <%= post.content %>
+                                    <br>
+                                    <small>
+                                        <!-- <%= post.user %> -->
+                                        <%= post.user.name %>
+                                    </small>
+                            </p>
+                            <div class=" post-comments">
+                                <% if(locals.user){%>
+                                <form action="/comments/create"  method="post">
+                                    <input type="text" name="content" placeholder="Type Here to add comment...">
+                                    <input type="hidden" name="post" value="<%= post._id  %>">
+                                    <input type="submit" value="Add Comment">
+                                </form>
+                                <% } %>
+                            </div>
+                        </li>
+                        <% } %>
+                </ul>
+            </div>
 </section>
