--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,37 +30,41 @@
                     <% for(post of posts){%>
                         <li>
                             <p>
-
-                                <%= post.content %>
-                                    <br>
+                                <% if(locals.user&& locals.user.id==post.user.id){ %>
                                     <small>
-                                        <!-- <%= post.user %> -->
-                                        <%= post.user.name %>
+                                        <a href="/posts/destroy/<%= post._id  %>">X</a>
                                     </small>
+                                    <% } %>
+                                        <%= post.content %>
+                                            <br>
+                                            <small>
+                                                <!-- <%= post.user %> -->
+                                                <%= post.user.name %>
+                                            </small>
                             </p>
                             <div class=" post-comments">
                                 <% if(locals.user){%>
-                                <form action="/comments/create"  method="post">
-                                    <input type="text" name="content" placeholder="Type Here to add comment...">
-                                    <input type="hidden" name="post" value="<%= post._id  %>">
-                                    <input type="submit" value="Add Comment">
-                                </form>
-                                <% } %>
+                                    <form action="/comments/create" method="post">
+                                        <input type="text" name="content" placeholder="Type Here to add comment...">
+                                        <input type="hidden" name="post" value="<%= post._id  %>">
+                                        <input type="submit" value="Add Comment">
+                                    </form>
+                                    <% } %>
 
-                                <div class="post-comments-list">
-                                    <ul id="post-comments-<%= post._id  %>">
-                                        <% for(comment of post.comments){%>
-                                            <p>
-                                                <%= comment.content%>
-                                                <br>
-                                                <small>
-                                                    <%= comment.user.name  %>
-                                                </small>
-                                            </p>
-                                        <% } %>
-                                    </ul>
+                                        <div class="post-comments-list">
+                                            <ul id="post-comments-<%= post._id  %>">
+                                                <% for(comment of post.comments){%>
+                                                    <p>
+                                                        <%= comment.content%>
+                                                            <br>
+                                                            <small>
+                                                                <%= comment.user.name %>
+                                                            </small>
+                                                    </p>
+                                                    <% } %>
+                                            </ul>
 
-                                </div>
+                                        </div>
                             </div>
                         </li>
                         <% } %>
