--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -18,5 +18,5 @@
 
 <link rel="stylesheet" href="/css/user_profile.css">
 <h1>User Profile</h1>
-<p>Name:<%= user.name%></p>
-<p>Email:<%= user.email%></p>
+<p>Name:<%= profile_user.name%></p>
+<p>Email:<%= profile_user.email%></p>
