--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,32 +14,38 @@
 </body>
 </html> -->
 
-<h1>Codeial</h1>
 
-<section id="feed-post">
-    <h4>Posts</h4>
-    <!-- authenticate user is usr is valid then shoe form  -->
-    <% if (locals.user){ %>
-        <form action="/posts/create" id="new-post-form" method="post">
-            <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
-            <input type="submit" value="submit">
-        </form>
-        <%}%>
-            <div id="posts-list-container">
-                <ul>
-                    <% for(post of posts){%>
-                        <%- include('_post')-%>
-                            <% } %>
-                </ul>
-            </div>
-</section>
+<!-- <h1>Codeial</h1> -->
 
-<section id="user-frinds">
-    <h4>Friends</h4>
-    <% for(u of all_users){ %>
-        <p>
-            <a href="/users/profile/<%= u.id %>"><%= u.name  %></a>
-        </p>
-    <% } %>
+<link rel="stylesheet" href="/css/home.css">
+<div id="home-container">
+    <section id="feed-posts">
+        <h4>Posts</h4>
+        <!-- authenticate user is usr is valid then shoe form  -->
+        <% if (locals.user){ %>
+            <form action="/posts/create" id="new-post-form" method="post">
+                <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
+                <input type="submit" value="submit">
+            </form>
+            <%}%>
+                <div id="posts-list-container">
+                    <ul>
+                        <% for(post of posts){%>
+                            <%- include('_post')-%>
+                                <% } %>
+                    </ul>
+                </div>
+    </section>
 
-</section>
+    <section id="user-friends">
+        <h4>Friends</h4>
+        <% for(u of all_users){ %>
+            <p>
+                <a href="/users/profile/<%= u.id %>">
+                    <%= u.name %>
+                </a>
+            </p>
+            <% } %>
+
+    </section>
+</div>
