--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,46 +11,50 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.map"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
     <!-- link style pages -->
-    <%- style %> 
+    <%- style %>
 </head>
 
 <body>
     <%- include('_header');%>
-    <!-- <% if (flash.success && flash.success.length>0) { %> -->
+        <!-- <% if (flash.success && flash.success.length>0) { %> -->
         <!-- <h5> -->
-            <!-- <%= flash.success  %> -->
+        <!-- <%= flash.success  %> -->
         <!-- </h5> -->
-    <!-- <% } %> -->
-    <main id="layout-main">
-        <%- body %>
-    </main>
-    <%- include('_footer');%>
-    <%- script %>
-    <script>
-         <% if (flash.success && flash.success.length>0) { %>
-        new Noty({
-            theme:'relax',
-            text:'<%= flash.success%>',
-            type:'success',
-            layout:'topRight',
-            timeout:1500
-        }).show();
+        <!-- <% } %> -->
+        <main id="layout-main">
+            <%- body %>
+        </main>
+        <%- include('_footer');%>
+        <%- script %>
+            <script>
+         <% if (flash.success && flash.success.length > 0) { %>
+                    new Noty({
+                        theme: 'relax',
+                        text: '<%= flash.success%>',
+                        type: 'success',
+                        layout: 'topRight',
+                        timeout: 1500
+                    }).show();
     <% } %>
 
        <% if (flash.error && flash.error.length > 0) { %>
-            new Noty({
-                theme: 'relax',
-                text: '<%= flash.error%>',
-                type: 'error',
-                layout: 'topRight',
-                timeout: 1500 
-            }).show();
+                    new Noty({
+                        theme: 'relax',
+                        text: '<%= flash.error%>',
+                        type: 'error',
+                        layout: 'topRight',
+                        timeout: 1500
+                    }).show();
     <% } %>
-    </script>
+            </script>
 
 </body>
 
