--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -17,7 +17,9 @@
 </html> -->
 
 <link rel="stylesheet" href="/css/user_profile.css">
-<h1>User Profile</h1>
+<!-- <h1>User Profile</h1> -->
+
+    <img src="<%= user.avatar %>" alt="<%= user.name %>" width="100" height="100">
 
 <% if(user.id==profile_user.id){ %>
     <!-- if user match then show user the form -->
