--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -11,6 +11,22 @@
                         <!-- <%= post.user %> -->
                         <%= post.user.name %>
                     </small>
+
+                    <!-- display the likes of this post , if the user is looged in ,then show the like ,else jus tshow the count -->
+                    <br>
+                    <!-- study about the data attribute -->
+                    </small>
+                    <small>
+                        <% if (locals.user){ %>
+                            <a class="toggle-like-button" data-likes="<%= post.likes.length %>"
+                                href="/likes/toggle/?id=<%=post._id%>&type=Post">
+                                <%= post.likes.length %> Likes
+                            </a>
+                            <% }else{ %>
+                                <%= post.likes.length %> Likes
+                                    <% } %>
+                    </small>
+
     </p>
     <div class=" post-comments">
         <% if(locals.user){%>
@@ -24,10 +40,10 @@
                 <div class="post-comments-list">
                     <ul id="post-comments-<%= post._id  %>">
                         <% for(comment of post.comments){%>
-                         <%- include('_comment')-%>
-                            <% } %>
-                    </ul>             
+                            <%- include('_comment')-%>
+                                <% } %>
+                    </ul>
 
-            </div>
+                </div>
     </div>
 </li>
