make initial connection of socket.io

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,7 +1,8 @@
-body{
+body {
     margin: 0;
-
-    #layout-main{
+    /* text-align: center; */
+    #layout-main {
         height: 100%;
     }
+    
 }
