--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,6 +1,6 @@
 #home-container{
     display: flex;
-
+    
     #feed-posts{
         width: 70%;
         padding: 10px;
@@ -9,7 +9,7 @@
     #user-friends{
         width: 30%;
         padding: 10px;
-        border-left: 1px solid lightgray;
-
+        border-left: 1px solid lightgrey;
+        height: 100%;
     }
 }
