--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,21 +1,37 @@
-<header>
-    page header
+<header id="layout-header">
+    <nav>
+        <div class="mini-logo">
+            <p>
+                <a href='/'>
+                    codeial
+                </a>
+            </p>
+        </div>
 
-    <ul>
-        <% if (locals.user){ %>
-            <li>
-                <a href="/users/profile/<%= user.id %>"><%= user.name%></a>
-            </li>
-            <li>
-                <a href="/users/sign-out">Sign Out</a>
-            </li>
-        <%}else {%>
-            <li>
-                <a href="/users/sign-in">Sign In</a>
-            </li>
-            <li>
-                <a href="/users/sign-up">Sign Up</a>
-            </li>
-        <%}%>
-    </ul>
+        <div class="auth-links">
+            <ul>
+                <% if (locals.user){ %>
+                    <li>
+                        <a href="/users/profile/<%= user.id %>">
+                            <%= user.name %>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/users/sign-out">Sign Out</a>
+                    </li>
+                    <% }else{ %>
+                        <li>
+                            <a href="/users/sign-in">Sign In</a>
+                        </li>
+                        <li>
+                            <a href="/users/sign-up">Sign Up</a>
+                        </li>
+
+                        <% } %>
+            </ul>
+        </div>
+    </nav>
+
+
+
 </header>
