--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,36 +18,41 @@
 <!-- <h1>Codeial</h1> -->
 
 <link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="/css/chat_box.css">
 <div id="home-container">
     <section id="feed-posts">
         <h4>Posts</h4>
-        <!-- authenticate user is usr is valid then shoe form  -->
-        <% if (locals.user){ %>
-            <form action="/posts/create" id="new-post-form" method="post">
-                <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
-                <input type="submit" value="submit">
+        <% if(locals.user){ %>
+            <form action="/posts/create" id="new-post-form" method="POST">
+                <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
+                <input type="submit" value="Post">
             </form>
-            <%}%>
+            <% } %>
+
                 <div id="posts-list-container">
                     <ul>
-                        <% for(post of posts){%>
-                            <%- include('_post')-%>
-                                <% } %>
+                        <% for(post of posts){ %>
+
+                            <%- include('_post') -%>
+
+                                <%} %>
                     </ul>
                 </div>
     </section>
 
+
     <section id="user-friends">
         <h4>Friends</h4>
-        <% for(u of all_users){ %>
+        <% for(u of all_users){%>
             <p>
                 <a href="/users/profile/<%= u.id %>">
                     <%= u.name %>
                 </a>
             </p>
             <% } %>
-
     </section>
+
+    <%- include('_chat_box') -%>    
 </div>
 
 <script src="/js/home_post_comments.js"></script>
@@ -61,3 +66,14 @@
         let toggleLike = new ToggleLike(self);
     });
 </script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.1/socket.io.js"></script>
+<script src="/js/chat_engine.js"></script>
+
+//chat ajax class
+<% if (locals.user) {%>
+<script>
+    //user-chat-box id of chatbox
+    new ChatEngine('user-chat-box','<%= locals.user._id %>')
+</script>
+<% } %>
