--- a/views/home.ejs
+++ b/views/home.ejs
@@ -74,6 +74,6 @@
 <% if (locals.user) {%>
 <script>
     //user-chat-box id of chatbox
-    new ChatEngine('user-chat-box','<%= locals.user._id %>')
+    new ChatEngine('user-chat-box','<%= locals.user.email %>')
 </script>
 <% } %>
